<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlForgetPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/UlensColor"
    tools:context="com.ulens.ulensapp.NonUserThings.ForgetPassword">

    <Button
        android:id="@+id/btnForgetPass"
        android:layout_width="328dp"
        android:layout_height="51dp"
        android:layout_alignEnd="@+id/imgEmailForget"
        android:layout_alignLeft="@+id/imgEmailForget"
        android:layout_alignRight="@+id/imgEmailForget"
        android:layout_alignStart="@+id/imgEmailForget"
        android:layout_below="@+id/imgEmailForget"
        android:layout_marginTop="23dp"
        android:background="@drawable/roundedcorners"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />

    <ImageView
        android:id="@+id/imgEmailForget"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="11dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconEpost3"
        android:layout_width="35dp"
        android:layout_height="39dp"
        android:layout_alignBottom="@+id/imgEmailForget"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:src="@drawable/iconepost"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imgText"
        app:layout_constraintEnd_toEndOf="@+id/imgText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgText"
        app:layout_constraintTop_toTopOf="@+id/imgText"
        app:layout_constraintVertical_bias="0.823" />

    <EditText
        android:id="@+id/edtEmailForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconEpost3"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/iconEpost3"
        android:layout_toRightOf="@+id/iconEpost3"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="Email Adresi"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imgText"
        app:layout_constraintEnd_toEndOf="@+id/imgText"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/iconEpost"
        app:layout_constraintTop_toTopOf="@+id/imgText" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="308dp"
        android:layout_height="211dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logodescription"
        android:paddingBottom="30dp"
        android:paddingLeft="35dp"
        android:paddingRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ulenslogosplash" />

    <TextView
        android:id="@+id/txtGoLoginForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/goLogin2"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/didYouForget"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/forgetpassbelowtext"
        android:textColor="#ffffff" />
</RelativeLayout>
