<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ulens.ulensapp.PostedInvoiceDetail">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:text="KDV"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/txtAmountPosted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="₺"
        android:textColor="@color/UlensColor"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imgPostedBill"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/receiptloading3"
        android:scaleType="centerCrop">


    </ImageView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgPostedBill"
        android:background="@color/UlensColor">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="39dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/txtNamePosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="İsim Yok"
            android:textColor="#ffffff"
            android:textColorLink="@color/transparent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="20dp"
            android:text="@string/scanning"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtCategoryPosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtDate"
            android:layout_alignLeft="@+id/view"
            android:layout_alignStart="@+id/view"
            android:text="@string/scanning"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="visible" />


    </RelativeLayout>




    <TextView
        android:id="@+id/txtTaxAmoPosted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:textColor="@color/UlensColor" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTaxAmoPosted"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/darker_gray" />

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="12dp"
        android:background="@drawable/iconblack" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">


    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view3"
        android:layout_toEndOf="@+id/scrollView2"
        android:layout_toRightOf="@+id/scrollView2">


        <Button
            android:id="@+id/btnAddToReport"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundedcorners"
            android:text="Kaydet"
            android:textColor="#ffffff"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/icondescription" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtPayment2"
            android:layout_alignRight="@+id/txtPayment2"
            android:layout_alignTop="@+id/imageView8"
            android:text="@string/billDescription"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/swBillablePosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtBillable2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/txtPayment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtBillable2"
            android:layout_alignStart="@+id/txtBillable2"
            android:layout_below="@+id/swBillablePosted"
            android:layout_marginTop="23dp"
            android:text="@string/paymentMethod"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtBillable2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/isBillable"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtDescriptionPosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView8"
            android:layout_alignStart="@+id/imageView8"
            android:layout_below="@+id/imageView8"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/billNotDescripted"
            android:inputType="textPersonName"
            android:theme="@style/MyEditTextTheme" />

        <TextView
            android:id="@+id/txtPaymentPosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtPayment2"
            android:layout_alignBottom="@+id/txtPayment2"
            android:layout_alignEnd="@+id/swBillablePosted"
            android:layout_alignRight="@+id/swBillablePosted"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtPayment2"
            android:layout_alignStart="@+id/txtPayment2"
            android:layout_below="@+id/txtPayment2"
            android:layout_marginTop="15dp"
            android:text="Rapor"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spReports"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView10"
            android:layout_toEndOf="@+id/txtBillable2"
            android:layout_toRightOf="@+id/txtBillable2" />

    </RelativeLayout>
</RelativeLayout>
